--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
             <div class="brand">
                 <h1>MESBG List Builder</h1>
                 <select id="army-selector">
-                    <option value="">-- Choose an Army List --</option>
-                    <option value="rohan.json">The Defenders of Helm's Deep</option>
-                    <option value="minas_tirith.json">The Tower of Guard</option>
+                <option value="">-- Loading Armies... --</option>
                 </select>
             </div>
             <div class="points-tracker">
