--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
                 <option value="">-- Loading Armies... --</option>
                 </select>
             </div>
-            <div class="points-tracker">
-                <span id="total-points">0</span> <small>Points</small>
-            </div>
+            <div class="stats-bar" id="army-stats-bar">
         </div>
     </header>
 
