--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <div class="brand">
                 <h1>MESBG List Builder</h1>
                 <select id="army-selector">
-                <option value="">-- Loading Armies... --</option>
+                    <option value="">-- Loading Armies... --</option>
                 </select>
             </div>
-            <div class="stats-bar" id="army-stats-bar">
+            <div class="stats-bar" id="army-stats-bar"></div>
         </div>
     </header>
 
@@ -31,9 +31,8 @@
         </section>
 
         <aside class="army-list-sidebar">
-            <h2 class="section-title">Current Warband</h2>
-            <div id="selected-units" class="selected-units-container">
-                </div>
+            <h2 class="section-title">Current Army</h2>
+            <div id="selected-units" class="selected-units-container"></div>
             <button id="clear-btn" class="btn-danger">Discard All</button>
         </aside>
     </main>
